// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transaction router > getAll > when getting expanded transaction results > should return the correct expanded blob 1`] = `
[
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "commitment": "0xb10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
        "dataStorageReferences": [],
        "proof": "b10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
        "size": 1500,
        "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "blockNumber": 1008,
    "blockTimestamp": 2023-08-31T16:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address2",
    "hash": "txHash016",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "commitment": "commitment004",
        "dataStorageReferences": [
          {
            "storage": "google",
            "url": "https://storage.googleapis.com/blobscan-test-bucket/1/ob/Ha/sh/obHash004.txt",
          },
          {
            "storage": "postgres",
            "url": "http://localhost:3001/blobs/blobHash004/data",
          },
        ],
        "proof": "proof004",
        "size": 1300,
        "versionedHash": "blobHash004",
      },
      {
        "commitment": "commitment004",
        "dataStorageReferences": [
          {
            "storage": "google",
            "url": "https://storage.googleapis.com/blobscan-test-bucket/1/ob/Ha/sh/obHash004.txt",
          },
          {
            "storage": "postgres",
            "url": "http://localhost:3001/blobs/blobHash004/data",
          },
        ],
        "proof": "proof004",
        "size": 1300,
        "versionedHash": "blobHash004",
      },
      {
        "commitment": "commitment004",
        "dataStorageReferences": [
          {
            "storage": "google",
            "url": "https://storage.googleapis.com/blobscan-test-bucket/1/ob/Ha/sh/obHash004.txt",
          },
          {
            "storage": "postgres",
            "url": "http://localhost:3001/blobs/blobHash004/data",
          },
        ],
        "proof": "proof004",
        "size": 1300,
        "versionedHash": "blobHash004",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "blockNumber": 1007,
    "blockTimestamp": 2023-08-31T14:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash015",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": "optimism",
    "to": "address4",
  },
]
`;

exports[`Transaction router > getAll > when getting expanded transaction results > should return the correct expanded block 1`] = `
[
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
      },
    ],
    "block": {
      "blobAsCalldataGasUsed": 255000n,
      "blobGasPrice": 22n,
      "blobGasUsed": 5500000n,
      "excessBlobGas": 15000n,
      "slot": 108,
    },
    "blockHash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "blockNumber": 1008,
    "blockTimestamp": 2023-08-31T16:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address2",
    "hash": "txHash016",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
    ],
    "block": {
      "blobAsCalldataGasUsed": 255000n,
      "blobGasPrice": 22n,
      "blobGasUsed": 5500000n,
      "excessBlobGas": 15000n,
      "slot": 107,
    },
    "blockHash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "blockNumber": 1007,
    "blockTimestamp": 2023-08-31T14:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash015",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": "optimism",
    "to": "address4",
  },
]
`;

exports[`Transaction router > getAll > when getting expanded transaction results > should return the correct expanded results when multiple expands are requested 1`] = `
[
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "commitment": "0xb10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
        "dataStorageReferences": [],
        "proof": "b10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
        "size": 1500,
        "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
      },
    ],
    "block": {
      "blobAsCalldataGasUsed": 255000n,
      "blobGasPrice": 22n,
      "blobGasUsed": 5500000n,
      "excessBlobGas": 15000n,
      "slot": 108,
    },
    "blockHash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "blockNumber": 1008,
    "blockTimestamp": 2023-08-31T16:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address2",
    "hash": "txHash016",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "commitment": "commitment004",
        "dataStorageReferences": [
          {
            "storage": "google",
            "url": "https://storage.googleapis.com/blobscan-test-bucket/1/ob/Ha/sh/obHash004.txt",
          },
          {
            "storage": "postgres",
            "url": "http://localhost:3001/blobs/blobHash004/data",
          },
        ],
        "proof": "proof004",
        "size": 1300,
        "versionedHash": "blobHash004",
      },
      {
        "commitment": "commitment004",
        "dataStorageReferences": [
          {
            "storage": "google",
            "url": "https://storage.googleapis.com/blobscan-test-bucket/1/ob/Ha/sh/obHash004.txt",
          },
          {
            "storage": "postgres",
            "url": "http://localhost:3001/blobs/blobHash004/data",
          },
        ],
        "proof": "proof004",
        "size": 1300,
        "versionedHash": "blobHash004",
      },
      {
        "commitment": "commitment004",
        "dataStorageReferences": [
          {
            "storage": "google",
            "url": "https://storage.googleapis.com/blobscan-test-bucket/1/ob/Ha/sh/obHash004.txt",
          },
          {
            "storage": "postgres",
            "url": "http://localhost:3001/blobs/blobHash004/data",
          },
        ],
        "proof": "proof004",
        "size": 1300,
        "versionedHash": "blobHash004",
      },
    ],
    "block": {
      "blobAsCalldataGasUsed": 255000n,
      "blobGasPrice": 22n,
      "blobGasUsed": 5500000n,
      "excessBlobGas": 15000n,
      "slot": 107,
    },
    "blockHash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "blockNumber": 1007,
    "blockTimestamp": 2023-08-31T14:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash015",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": "optimism",
    "to": "address4",
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return results up to and including the specified slot 1`] = `
[
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b1",
      },
      {
        "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b2",
      },
      {
        "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b3",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash002",
    "blockNumber": 1002,
    "blockTimestamp": 2023-05-10T12:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x5050f69a9786f081509234f1a7f4684b5e5b76c9",
    "hash": "txHash004",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": "base",
    "to": "address3",
  },
  {
    "blobAsCalldataGasFee": 14400n,
    "blobAsCalldataGasUsed": 1200n,
    "blobGasBaseFee": 5767168n,
    "blobGasMaxFee": 31457280n,
    "blobGasPrice": 22n,
    "blobGasUsed": 262144n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "blockTimestamp": 2022-10-16T12:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash003",
    "index": 2,
    "maxFeePerBlobGas": 120n,
    "rollup": "optimism",
    "to": "address6",
  },
  {
    "blobAsCalldataGasFee": 12100n,
    "blobAsCalldataGasUsed": 1100n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 14417920n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "blockTimestamp": 2022-10-16T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address3",
    "hash": "txHash002",
    "index": 1,
    "maxFeePerBlobGas": 110n,
    "rollup": null,
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
      {
        "versionedHash": "blobHash003",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "blockTimestamp": 2022-10-16T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address1",
    "hash": "txHash001",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address2",
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the latest results when no sort was specified 1`] = `
[
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "blockNumber": 1008,
    "blockTimestamp": 2023-08-31T16:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address2",
    "hash": "txHash016",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "blockNumber": 1007,
    "blockTimestamp": 2023-08-31T14:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash015",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": "optimism",
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash006",
    "blockNumber": 1006,
    "blockTimestamp": 2023-08-31T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address5",
    "hash": "0x5be77167b05f39ea8950f11b0da2bdfec6e04055030068b051ac5a43aaf251e9",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address6",
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the oldest results when ascending order is specified 1`] = `
[
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
      {
        "versionedHash": "blobHash003",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "blockTimestamp": 2022-10-16T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address1",
    "hash": "txHash001",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address2",
  },
  {
    "blobAsCalldataGasFee": 12100n,
    "blobAsCalldataGasUsed": 1100n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 14417920n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "blockTimestamp": 2022-10-16T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address3",
    "hash": "txHash002",
    "index": 1,
    "maxFeePerBlobGas": 110n,
    "rollup": null,
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 14400n,
    "blobAsCalldataGasUsed": 1200n,
    "blobGasBaseFee": 5767168n,
    "blobGasMaxFee": 31457280n,
    "blobGasPrice": 22n,
    "blobGasUsed": 262144n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "blockTimestamp": 2022-10-16T12:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash003",
    "index": 2,
    "maxFeePerBlobGas": 120n,
    "rollup": "optimism",
    "to": "address6",
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the results corresponding to a provided rollup 1`] = `
[
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "blockNumber": 1007,
    "blockTimestamp": 2023-08-31T14:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash015",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": "optimism",
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 7864320n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 20n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash001",
      },
    ],
    "block": {
      "blobGasPrice": 20n,
    },
    "blockHash": "blockHash005",
    "blockNumber": 1005,
    "blockTimestamp": 2023-08-28T10:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash012",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": "optimism",
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "blockTimestamp": 2023-08-20T12:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash007",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": "optimism",
    "to": "address2",
  },
  {
    "blobAsCalldataGasFee": 14400n,
    "blobAsCalldataGasUsed": 1200n,
    "blobGasBaseFee": 5767168n,
    "blobGasMaxFee": 31457280n,
    "blobGasPrice": 22n,
    "blobGasUsed": 262144n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "blockTimestamp": 2022-10-16T12:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash003",
    "index": 2,
    "maxFeePerBlobGas": 120n,
    "rollup": "optimism",
    "to": "address6",
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the results corresponding to reorged blocks when 'reorged' type is specified 1`] = `
[
  {
    "blobAsCalldataGasFee": 1866000n,
    "blobAsCalldataGasUsed": 15550n,
    "blobGasBaseFee": 5767168n,
    "blobGasMaxFee": 148373504n,
    "blobGasPrice": 22n,
    "blobGasUsed": 262144n,
    "blobs": [
      {
        "versionedHash": "0x01d5cc28986f58db309e0fae63b60ade81a01667721e190ec142051240b5d436",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "0x00903f147f44929cdb385b595b2e745566fe50658362b4e3821fa52b5ebe8f06",
    "blockNumber": 1008,
    "blockTimestamp": 2023-08-31T15:50:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "0xd80214f2e7c7271114f372b6a8baaf39bcb364448788f6d8229d2a903edf9272",
    "index": 0,
    "maxFeePerBlobGas": 566n,
    "rollup": "optimism",
    "to": "address1",
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the results corresponding to the block range specified  1`] = `
[
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash006",
    "blockNumber": 1006,
    "blockTimestamp": 2023-08-31T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address5",
    "hash": "0x5be77167b05f39ea8950f11b0da2bdfec6e04055030068b051ac5a43aaf251e9",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address6",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2621440n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 20n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "block": {
      "blobGasPrice": 20n,
    },
    "blockHash": "blockHash005",
    "blockNumber": 1005,
    "blockTimestamp": 2023-08-28T10:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address5",
    "hash": "txHash013",
    "index": 1,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 7864320n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 20n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash001",
      },
    ],
    "block": {
      "blobGasPrice": 20n,
    },
    "blockHash": "blockHash005",
    "blockNumber": 1005,
    "blockTimestamp": 2023-08-28T10:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash012",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": "optimism",
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "blobHash005",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "blockTimestamp": 2023-08-20T12:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x5050f69a9786f081509234f1a7f4684b5e5b76c9",
    "hash": "txHash011",
    "index": 4,
    "maxFeePerBlobGas": 100n,
    "rollup": "base",
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "blobHash003",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "blockTimestamp": 2023-08-20T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address3",
    "hash": "txHash010",
    "index": 3,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "blobHash003",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "blockTimestamp": 2023-08-20T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address5",
    "hash": "txHash009",
    "index": 2,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address6",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "blobHash002",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "blockTimestamp": 2023-08-20T12:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0xc1b634853cb333d3ad8663715b08f41a3aec47cc",
    "hash": "txHash008",
    "index": 1,
    "maxFeePerBlobGas": 100n,
    "rollup": "arbitrum",
    "to": "address6",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "blockTimestamp": 2023-08-20T12:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash007",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": "optimism",
    "to": "address2",
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the results corresponding to the date range specified 1`] = `
[
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "blobHash005",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "blockTimestamp": 2023-08-20T12:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x5050f69a9786f081509234f1a7f4684b5e5b76c9",
    "hash": "txHash011",
    "index": 4,
    "maxFeePerBlobGas": 100n,
    "rollup": "base",
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "blobHash003",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "blockTimestamp": 2023-08-20T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address3",
    "hash": "txHash010",
    "index": 3,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "blobHash003",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "blockTimestamp": 2023-08-20T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address5",
    "hash": "txHash009",
    "index": 2,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address6",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "blobHash002",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "blockTimestamp": 2023-08-20T12:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0xc1b634853cb333d3ad8663715b08f41a3aec47cc",
    "hash": "txHash008",
    "index": 1,
    "maxFeePerBlobGas": 100n,
    "rollup": "arbitrum",
    "to": "address6",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "blockTimestamp": 2023-08-20T12:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash007",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": "optimism",
    "to": "address2",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash001",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash003",
    "blockNumber": 1003,
    "blockTimestamp": 2023-08-03T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address2",
    "hash": "txHash006",
    "index": 1,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash002",
      },
      {
        "versionedHash": "blobHash002",
      },
      {
        "versionedHash": "blobHash001",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash003",
    "blockNumber": 1003,
    "blockTimestamp": 2023-08-03T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address2",
    "hash": "txHash005",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address4",
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the results corresponding to the receiver address specified 1`] = `
[
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "blockTimestamp": 2023-08-20T12:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash007",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": "optimism",
    "to": "address2",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
      {
        "versionedHash": "blobHash003",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "blockTimestamp": 2022-10-16T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address1",
    "hash": "txHash001",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address2",
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the results corresponding to the sender address specified 1`] = `
[
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
      {
        "versionedHash": "blobHash003",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "blockTimestamp": 2022-10-16T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address1",
    "hash": "txHash001",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address2",
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the results corresponding to the sender and receiver addresses specified 1`] = `
[
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
      {
        "versionedHash": "blobHash003",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "blockTimestamp": 2022-10-16T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address1",
    "hash": "txHash001",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address2",
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the results ending at the block specified without including it 1`] = `
[
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b1",
      },
      {
        "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b2",
      },
      {
        "versionedHash": "0x000000000000000000000000000000000000000000000000000000000000b3",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash002",
    "blockNumber": 1002,
    "blockTimestamp": 2023-05-10T12:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x5050f69a9786f081509234f1a7f4684b5e5b76c9",
    "hash": "txHash004",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": "base",
    "to": "address3",
  },
  {
    "blobAsCalldataGasFee": 14400n,
    "blobAsCalldataGasUsed": 1200n,
    "blobGasBaseFee": 5767168n,
    "blobGasMaxFee": 31457280n,
    "blobGasPrice": 22n,
    "blobGasUsed": 262144n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "blockTimestamp": 2022-10-16T12:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash003",
    "index": 2,
    "maxFeePerBlobGas": 120n,
    "rollup": "optimism",
    "to": "address6",
  },
  {
    "blobAsCalldataGasFee": 12100n,
    "blobAsCalldataGasUsed": 1100n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 14417920n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "blockTimestamp": 2022-10-16T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address3",
    "hash": "txHash002",
    "index": 1,
    "maxFeePerBlobGas": 110n,
    "rollup": null,
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
      {
        "versionedHash": "blobHash003",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "blockTimestamp": 2022-10-16T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address1",
    "hash": "txHash001",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address2",
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the results ending at the date specified without including it 1`] = `
[
  {
    "blobAsCalldataGasFee": 14400n,
    "blobAsCalldataGasUsed": 1200n,
    "blobGasBaseFee": 5767168n,
    "blobGasMaxFee": 31457280n,
    "blobGasPrice": 22n,
    "blobGasUsed": 262144n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "blockTimestamp": 2022-10-16T12:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash003",
    "index": 2,
    "maxFeePerBlobGas": 120n,
    "rollup": "optimism",
    "to": "address6",
  },
  {
    "blobAsCalldataGasFee": 12100n,
    "blobAsCalldataGasUsed": 1100n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 14417920n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "blockTimestamp": 2022-10-16T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address3",
    "hash": "txHash002",
    "index": 1,
    "maxFeePerBlobGas": 110n,
    "rollup": null,
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
      {
        "versionedHash": "blobHash003",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "blockTimestamp": 2022-10-16T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address1",
    "hash": "txHash001",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address2",
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the results starting from the block specified 1`] = `
[
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "blockNumber": 1008,
    "blockTimestamp": 2023-08-31T16:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address2",
    "hash": "txHash016",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "blockNumber": 1007,
    "blockTimestamp": 2023-08-31T14:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash015",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": "optimism",
    "to": "address4",
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the results starting from the date specified 1`] = `
[
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "blockNumber": 1008,
    "blockTimestamp": 2023-08-31T16:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address2",
    "hash": "txHash016",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "blockNumber": 1007,
    "blockTimestamp": 2023-08-31T14:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash015",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": "optimism",
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash006",
    "blockNumber": 1006,
    "blockTimestamp": 2023-08-31T12:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address5",
    "hash": "0x5be77167b05f39ea8950f11b0da2bdfec6e04055030068b051ac5a43aaf251e9",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address6",
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the results starting from the slot specified 1`] = `
[
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "blockNumber": 1008,
    "blockTimestamp": 2023-08-31T16:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address2",
    "hash": "txHash016",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "blockNumber": 1007,
    "blockTimestamp": 2023-08-31T14:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash015",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": "optimism",
    "to": "address4",
  },
]
`;

exports[`Transaction router > getAll > when getting paginated transaction results > should default to the first page when no page was specified 1`] = `
[
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "blockNumber": 1008,
    "blockTimestamp": 2023-08-31T16:00:00.000Z,
    "category": "other",
    "decodedFields": null,
    "from": "address2",
    "hash": "txHash016",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": null,
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 8650752n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 22n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "blockNumber": 1007,
    "blockTimestamp": 2023-08-31T14:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash015",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": "optimism",
    "to": "address4",
  },
]
`;

exports[`Transaction router > getAll > when getting paginated transaction results > should return the correct results when a specific page is requested 1`] = `
[
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 7864320n,
    "blobGasMaxFee": 39321600n,
    "blobGasPrice": 20n,
    "blobGasUsed": 393216n,
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash001",
      },
    ],
    "block": {
      "blobGasPrice": 20n,
    },
    "blockHash": "blockHash005",
    "blockNumber": 1005,
    "blockTimestamp": 2023-08-28T10:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
    "hash": "txHash012",
    "index": 0,
    "maxFeePerBlobGas": 100n,
    "rollup": "optimism",
    "to": "address4",
  },
  {
    "blobAsCalldataGasFee": 10000n,
    "blobAsCalldataGasUsed": 1000n,
    "blobGasBaseFee": 2883584n,
    "blobGasMaxFee": 13107200n,
    "blobGasPrice": 22n,
    "blobGasUsed": 131072n,
    "blobs": [
      {
        "versionedHash": "blobHash005",
      },
    ],
    "block": {
      "blobGasPrice": 22n,
    },
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "blockTimestamp": 2023-08-20T12:00:00.000Z,
    "category": "rollup",
    "decodedFields": null,
    "from": "0x5050f69a9786f081509234f1a7f4684b5e5b76c9",
    "hash": "txHash011",
    "index": 4,
    "maxFeePerBlobGas": 100n,
    "rollup": "base",
    "to": "address4",
  },
]
`;

exports[`Transaction router > getAll > when getting paginated transaction results > should return the total number of items when count is provided 1`] = `16`;

exports[`Transaction router > getByHash > should fail when providing a non-existent hash > [TRPCError: No transaction with hash 'nonExistingHash' found] 1`] = `[TRPCError: No transaction with hash 'nonExistingHash'.]`;

exports[`Transaction router > getByHash > should get a transaction by hash correctly 1`] = `
{
  "blobAsCalldataGasFee": 10000n,
  "blobAsCalldataGasUsed": 1000n,
  "blobGasBaseFee": 8650752n,
  "blobGasMaxFee": 39321600n,
  "blobGasPrice": 22n,
  "blobGasUsed": 393216n,
  "blobs": [
    {
      "versionedHash": "blobHash001",
    },
    {
      "versionedHash": "blobHash002",
    },
    {
      "versionedHash": "blobHash003",
    },
  ],
  "block": {
    "blobGasPrice": 22n,
  },
  "blockHash": "blockHash001",
  "blockNumber": 1001,
  "blockTimestamp": 2022-10-16T12:00:00.000Z,
  "category": "other",
  "decodedFields": null,
  "from": "address1",
  "hash": "txHash001",
  "index": 0,
  "maxFeePerBlobGas": 100n,
  "rollup": null,
  "to": "address2",
}
`;

exports[`Transaction router > getByHash > when getting expanded transaction results > should return the correct expanded blob 1`] = `
{
  "blobAsCalldataGasFee": 10000n,
  "blobAsCalldataGasUsed": 1000n,
  "blobGasBaseFee": 8650752n,
  "blobGasMaxFee": 39321600n,
  "blobGasPrice": 22n,
  "blobGasUsed": 393216n,
  "blobs": [
    {
      "commitment": "commitment001",
      "dataStorageReferences": [
        {
          "storage": "google",
          "url": "https://storage.googleapis.com/blobscan-test-bucket/1/ob/Ha/sh/obHash001.txt",
        },
        {
          "storage": "swarm",
          "url": "https://gateway.ethswarm.org/access/bzz://some-hash-for-blobHash001",
        },
      ],
      "proof": "proof001",
      "size": 1000,
      "versionedHash": "blobHash001",
    },
    {
      "commitment": "commitment002",
      "dataStorageReferences": [
        {
          "storage": "google",
          "url": "https://storage.googleapis.com/blobscan-test-bucket/1/ob/Ha/sh/obHash002.txt",
        },
      ],
      "proof": "proof002",
      "size": 1100,
      "versionedHash": "blobHash002",
    },
    {
      "commitment": "commitment003",
      "dataStorageReferences": [
        {
          "storage": "google",
          "url": "https://storage.googleapis.com/blobscan-test-bucket/1/ob/Ha/sh/obHash003.txt",
        },
        {
          "storage": "swarm",
          "url": "https://gateway.ethswarm.org/access/bzz://some-hash-for-blobHash003",
        },
      ],
      "proof": "proof003",
      "size": 1200,
      "versionedHash": "blobHash003",
    },
  ],
  "block": {
    "blobGasPrice": 22n,
  },
  "blockHash": "blockHash001",
  "blockNumber": 1001,
  "blockTimestamp": 2022-10-16T12:00:00.000Z,
  "category": "other",
  "decodedFields": null,
  "from": "address1",
  "hash": "txHash001",
  "index": 0,
  "maxFeePerBlobGas": 100n,
  "rollup": null,
  "to": "address2",
}
`;

exports[`Transaction router > getByHash > when getting expanded transaction results > should return the correct expanded block 1`] = `
{
  "blobAsCalldataGasFee": 10000n,
  "blobAsCalldataGasUsed": 1000n,
  "blobGasBaseFee": 8650752n,
  "blobGasMaxFee": 39321600n,
  "blobGasPrice": 22n,
  "blobGasUsed": 393216n,
  "blobs": [
    {
      "versionedHash": "blobHash001",
    },
    {
      "versionedHash": "blobHash002",
    },
    {
      "versionedHash": "blobHash003",
    },
  ],
  "block": {
    "blobAsCalldataGasUsed": 2042780n,
    "blobGasPrice": 22n,
    "blobGasUsed": 786432n,
    "excessBlobGas": 15000n,
    "slot": 101,
  },
  "blockHash": "blockHash001",
  "blockNumber": 1001,
  "blockTimestamp": 2022-10-16T12:00:00.000Z,
  "category": "other",
  "decodedFields": null,
  "from": "address1",
  "hash": "txHash001",
  "index": 0,
  "maxFeePerBlobGas": 100n,
  "rollup": null,
  "to": "address2",
}
`;

exports[`Transaction router > getByHash > when getting expanded transaction results > should return the correct expanded results when multiple expands are requested 1`] = `
{
  "blobAsCalldataGasFee": 10000n,
  "blobAsCalldataGasUsed": 1000n,
  "blobGasBaseFee": 8650752n,
  "blobGasMaxFee": 39321600n,
  "blobGasPrice": 22n,
  "blobGasUsed": 393216n,
  "blobs": [
    {
      "commitment": "commitment001",
      "dataStorageReferences": [
        {
          "storage": "google",
          "url": "https://storage.googleapis.com/blobscan-test-bucket/1/ob/Ha/sh/obHash001.txt",
        },
        {
          "storage": "swarm",
          "url": "https://gateway.ethswarm.org/access/bzz://some-hash-for-blobHash001",
        },
      ],
      "proof": "proof001",
      "size": 1000,
      "versionedHash": "blobHash001",
    },
    {
      "commitment": "commitment002",
      "dataStorageReferences": [
        {
          "storage": "google",
          "url": "https://storage.googleapis.com/blobscan-test-bucket/1/ob/Ha/sh/obHash002.txt",
        },
      ],
      "proof": "proof002",
      "size": 1100,
      "versionedHash": "blobHash002",
    },
    {
      "commitment": "commitment003",
      "dataStorageReferences": [
        {
          "storage": "google",
          "url": "https://storage.googleapis.com/blobscan-test-bucket/1/ob/Ha/sh/obHash003.txt",
        },
        {
          "storage": "swarm",
          "url": "https://gateway.ethswarm.org/access/bzz://some-hash-for-blobHash003",
        },
      ],
      "proof": "proof003",
      "size": 1200,
      "versionedHash": "blobHash003",
    },
  ],
  "block": {
    "blobAsCalldataGasUsed": 2042780n,
    "blobGasPrice": 22n,
    "blobGasUsed": 786432n,
    "excessBlobGas": 15000n,
    "slot": 101,
  },
  "blockHash": "blockHash001",
  "blockNumber": 1001,
  "blockTimestamp": 2022-10-16T12:00:00.000Z,
  "category": "other",
  "decodedFields": null,
  "from": "address1",
  "hash": "txHash001",
  "index": 0,
  "maxFeePerBlobGas": 100n,
  "rollup": null,
  "to": "address2",
}
`;
